--- a/ImageProc/ImageProc.vcxproj.filters
+++ b/ImageProc/ImageProc.vcxproj.filters
@@ -27,4 +27,7 @@
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\..\Users\simon\Downloads\PEN.pgm" />
+  </ItemGroup>
 </Project>
