--- a/ImageProc/ImageProc.vcxproj.filters
+++ b/ImageProc/ImageProc.vcxproj.filters
@@ -28,6 +28,8 @@
     </Image>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\..\..\..\Users\simon\Downloads\PEN.pgm" />
+    <None Include="..\..\..\..\Users\simon\Downloads\PEN.pgm">
+      <Filter>Resource Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
